--- a/path/deploy.yaml
+++ b/path/deploy.yaml
@@ -22,3 +22,27 @@ spec:
         name: nginx
         resources: {}
 status: {}
+
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  creationTimestamp: null
+  labels:
+    app: deploy-web
+    argocd.argoproj.io/instance: testargo
+  name: deploy-web
+spec:
+  ports:
+  - port: 90
+    protocol: TCP
+    targetPort: 90
+  selector:
+    app: deploy-web
+  type: NodePort
+status:
+  loadBalancer: {}
+
+
